--- a/app/index.css
+++ b/app/index.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+
+/* <-------- LAYOUT STYLES -------> */
+
 html {
   width: 100%;
   height: 100%;
@@ -14,6 +19,8 @@ body {
   height: 100%;
   width: 100%;
 }
+
+/* <---- NAVBAR -----> */
 
 .navbar {
   display: flex;
@@ -85,6 +92,49 @@ body {
   margin: 10px;
 }
 
+/* <----- NOT FOUND PAGE -------> */
+
 .not-found {
   text-align: center;
+}
+
+/* <------ LOADING TEXT ------> */
+
+.loading {
+  text-align: center;
+  font-size: 3em;
+  margin-top: 10%;
+}
+
+/* <---- THE NAME OF CITY ----> */
+
+.forecast-header {
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: 100;
+  padding-bottom: 70px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.forecast-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.dayContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.dayContainer img {
+  width: 150px;
+}
+
+.subheader {
+  font-family: 'Open Sans', sans-serif;
+  color: #000;
 }
